remove setup-venv from formating workflow

--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -22,8 +22,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - id: setup-venv
-        uses: ./.github/workflows/setup-venv
+      - name: environment
+        run: |
+          which python
+          python --version
 
       - name: Install deepspeed
         run: |
@@ -32,4 +34,5 @@ jobs:
 
       - name: Formatting checks
         run: |
+           pip show pre-commit clang-format
            pre-commit run --all-files
