--- a/.github/workflows/setup-venv/action.yml
+++ b/.github/workflows/setup-venv/action.yml
@@ -6,12 +6,14 @@ runs:
     - id: update-env
       run: |
         sudo apt-get update && sudo apt-get -y upgrade
+        sudo apt-get install -y libaio-dev
         pip install --upgrade pip
         python -m pip install -U virtualenv
       shell: bash
     - id: create-venv
       run: |
         sudo apt-get update && sudo apt-get -y upgrade
+        sudo apt-get install -y libaio-dev
         pip install --upgrade pip
         python -m pip install -U virtualenv
         python -m venv unit-test-venv
