Common location to install libaio-dev (#2779)
* Common location to install libaio-dev

* Update .github/workflows/setup-venv/action.yml

Co-authored-by: Michael Wyatt <michaelwyatt@microsoft.com>

---------

Co-authored-by: Michael Wyatt <michaelwyatt@microsoft.com>

--- a/.github/workflows/setup-venv/action.yml
+++ b/.github/workflows/setup-venv/action.yml
@@ -6,14 +6,12 @@ runs:
     - id: update-env
       run: |
         sudo apt-get update && sudo apt-get -y upgrade
+        sudo apt-get install -y libaio-dev
         pip install --upgrade pip
         python -m pip install -U virtualenv
       shell: bash
     - id: create-venv
       run: |
-        sudo apt-get update && sudo apt-get -y upgrade
-        pip install --upgrade pip
-        python -m pip install -U virtualenv
         python -m venv unit-test-venv
         source ./unit-test-venv/bin/activate
         pip install --upgrade pip
