--- a/.github/workflows/setup-venv/action.yml
+++ b/.github/workflows/setup-venv/action.yml
@@ -7,14 +7,13 @@ runs:
       run: |
         sudo apt-get update && sudo apt-get -y upgrade
         sudo apt-get install -y libaio-dev
-        pip install --upgrade pip
-        python -m pip install -U virtualenv
+        sudo pip install --upgrade pip
+        sudo python -m pip install --upgrade virtualenv
       shell: bash
     - id: create-venv
       run: |
         python -m venv unit-test-venv
         source ./unit-test-venv/bin/activate
-        pip install --upgrade pip
         echo PATH=$PATH >> $GITHUB_ENV # Make it so venv is inherited for other steps
       shell: bash
     - id: print-env
