--- a/.github/workflows/setup-venv/action.yml
+++ b/.github/workflows/setup-venv/action.yml
@@ -7,12 +7,13 @@ runs:
       run: |
         sudo apt-get update && sudo apt-get -y upgrade
         sudo apt-get install -y libaio-dev
-        pip install --user --upgrade pip
+        python -m pip install --user --upgrade pip
         python -m pip install --user --upgrade virtualenv
       shell: bash
     - id: create-venv
       run: |
         python -m venv unit-test-venv
+        python -m pip install --upgrade pip
         source ./unit-test-venv/bin/activate
         echo PATH=$PATH >> $GITHUB_ENV # Make it so venv is inherited for other steps
       shell: bash
