--- a/.github/workflows/setup-venv/action.yml
+++ b/.github/workflows/setup-venv/action.yml
@@ -22,13 +22,15 @@ runs:
         which python
         python --version
         if [[ -z "${AISC_NODE_INSTANCE_ID}" ]]; then
+          echo "Not on self-hosted node"
+        else
           echo "JobID: ${AISC_NODE_INSTANCE_ID}"
         fi
         if command -v nvidia-smi; then
           nvidia-smi
           which nvcc
           nvcc --version
-        elif command -c rocm-smi; then
+        elif command -v rocm-smi; then
           rocm-smi --showhw
           which hipcc
           hipcc --version
