--- a/.github/workflows/nv-torch18-p40.yml
+++ b/.github/workflows/nv-torch18-p40.yml
@@ -45,6 +45,10 @@ jobs:
           pip install .[dev,1bit,autotuning]
           ds_report
 
+      - name: Install torch_nebula
+        run: |
+          pip install tests/nebula-package/torch_nebula-0.16.0-py3-none-any.whl
+          
       - name: Python environment
         run: |
           pip list
