--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -2,7 +2,7 @@ clang-format>=14.0.6
 docutils<0.18
 future
 importlib-metadata>=4
-megatron-lm==1.1.5
+megatron-lm
 pre-commit>=2.20.0
 pytest
 pytest-forked
