Pin to previous accelerate version

--- a/.github/workflows/nv-accelerate-v100.yml
+++ b/.github/workflows/nv-accelerate-v100.yml
@@ -45,7 +45,7 @@ jobs:
           git clone https://github.com/huggingface/accelerate
           cd accelerate
           # tmp fix
-          #git checkout 5f4ba04628eeea14f9d248ab0e54399899503532
+          git checkout 5f4ba04628eeea14f9d248ab0e54399899503532
           git rev-parse --short HEAD
           # installing dependencies
           pip install .[testing]
