--- a/.github/workflows/nv-lightning-v100.yml
+++ b/.github/workflows/nv-lightning-v100.yml
@@ -42,6 +42,7 @@ jobs:
       - name: PyTorch Lightning Tests
         run: |
           if [[ -d ./torch-extensions ]]; then rm -rf ./torch-extensions; fi
+          # Pin pytorch-lightning version to latest pre-2.0.0+ as these require updating the pinned torch versions above.
           pip install pytorch-lightning==1.9.4
           pip install "protobuf<4.21.0"
           cd tests
