use dependency_links in setuptools.setup() call for additional dependency links

--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          pip install .[dev,autotuning,cpu]
+          pip install .[dev,autotuning]
           ds_report
 
       - name: Formatting checks
