--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -26,6 +26,11 @@ jobs:
           which python
           python --version
 
+      # temporary install oneccl_bind_pt separately
+      - name: Install oneccl_bind_pt
+        run: |
+          python -m pip install oneccl_bind_pt==1.13 -f https://developer.intel.com/ipex-whl-stable-cpu
+
       - name: Install deepspeed
         run: |
           pip install .[dev,autotuning]
