change cpu runs-on node to v100 node

--- a/.github/workflows/cpu-inference.yml
+++ b/.github/workflows/cpu-inference.yml
@@ -16,7 +16,7 @@ concurrency:
 
 jobs:
   unit-tests:
-    runs-on: [self-hosted, nvidia, p40]
+    runs-on: [self-hosted, nvidia, v100]
 
     steps:
       - uses: actions/checkout@v2
