--- a/.github/workflows/cpu-inference.yml
+++ b/.github/workflows/cpu-inference.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Install oneCCL Bindings for PyTorch
         run: |
+          python --version
           python -m pip install oneccl_bind_pt==2.0 -f https://developer.intel.com/ipex-whl-stable-cpu
 
       - name: Install transformers
