--- a/.github/workflows/cpu-inference.yml
+++ b/.github/workflows/cpu-inference.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Install oneCCL Bindings for PyTorch
         run: |
-          python --version
-          python -m pip -v install oneccl_bind_pt==2.0 -f https://developer.intel.com/ipex-whl-stable-cpu
+          python -m pip install intel_extension_for_pytorch
+          python -m pip install oneccl_bind_pt==2.0 -f https://developer.intel.com/ipex-whl-stable-cpu
 
       - name: Install transformers
         run: |
@@ -38,7 +38,9 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          pip install .[dev,1bit,autotuning,inf,cpu]
+          # check why the host does not have AVX2 support
+          cat /proc/cpuinfo
+          pip install .[dev,1bit,autotuning,inf]
           ds_report
 
       - name: Python environment
