--- a/.github/workflows/nv-transformers-v100.yml
+++ b/.github/workflows/nv-transformers-v100.yml
@@ -42,8 +42,7 @@ jobs:
       - name: HF transformers tests
         run: |
           if [[ -d ./torch-extensions ]]; then rm -rf ./torch-extensions; fi
-          #git clone https://github.com/huggingface/transformers
-          git clone -b fix-gptj-torch-fx https://github.com/mrwyattii/transformers
+          git clone https://github.com/huggingface/transformers
           cd transformers
           # if needed switch to the last known good SHA until transformers@master is fixed
           #git checkout 6268694e2
