--- a/.github/workflows/cpu-inference.yml
+++ b/.github/workflows/cpu-inference.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           #python -m pip install intel_extension_for_pytorch
           # temporary wheel to test the fix for AVX2 instruction set detection
-          python -m pip install intel_extension_for_pytorch --trusted-host clx03-tce.sh.intel.com -f http://clx03-tce.sh.intel.com:8083/ipex-release.php?repo=cpu
+          python -m pip install intel_extension_for_pytorch -f https://intel-extension-for-pytorch.s3.amazonaws.com/indices/ipex-test.html
           python -m pip install oneccl_bind_pt==2.0 -f https://developer.intel.com/ipex-whl-stable-cpu
 
       - name: Install transformers
