--- a/.github/workflows/amd.yml
+++ b/.github/workflows/amd.yml
@@ -9,6 +9,8 @@ on:
   pull_request:
     paths-ignore:
       - 'docs/**'
+  schedule:
+    - cron: "0 0 * * *"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
