--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       '**'
+  schedule:
+    - cron: "0 0 * * *"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
