--- a/.github/workflows/pre-compile-ops-nv.yml
+++ b/.github/workflows/pre-compile-ops-nv.yml
@@ -27,9 +27,9 @@ jobs:
           run: |
             which python
             python --version
-        - name: Install deepspeed
+        - name: Compile DeepSpeed Ops
           run: |
-            DS_BUILD_OPS=1 pip3 install .
+            DS_BUILD_OPS=1 DS_BUILD_SPARSE_ATTN=0 pip3 install .
         - name: DS Report
           run: |
              ds_report
