--- a/.github/workflows/pre-compile-ops-nv.yml
+++ b/.github/workflows/pre-compile-ops-nv.yml
@@ -18,7 +18,7 @@ jobs:
   build-ops:
     runs-on: ubuntu-20.04
     container:
-      image: deepspeed/gh-builder:ubuntu1804-py38-torch112-cu116
+      image: deepspeed/gh-builder:py310-torch112-cu116
 
     steps:
         - uses: actions/checkout@v2
