--- a/.github/workflows/pre-compile-ops-nv.yml
+++ b/.github/workflows/pre-compile-ops-nv.yml
@@ -27,6 +27,8 @@ jobs:
           run: |
             which python
             python --version
+            python -c "import torch; print('torch:', torch.__version__, torch)"
+            python -c "import torch; print('CUDA available:', torch.cuda.is_available())"
         - name: Compile DeepSpeed Ops
           run: |
             DS_BUILD_OPS=1 DS_BUILD_SPARSE_ATTN=0 pip3 install .
