--- a/.github/workflows/nv-torch-latest-v100.yml
+++ b/.github/workflows/nv-torch-latest-v100.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          pip install .[dev,1bit,autotuning]
+          DS_BUILD_OPS=1 DS_BUILD_SPARSE_ATTN=0 pip install .[dev,1bit,autotuning]
           ds_report
 
       - name: Python environment
