Revert "Test building ops in other pipelines"
This reverts commit 8aca5f87c39cdcaa33c26eed367d181422c0d6a3.

--- a/.github/workflows/nv-torch-latest-cpu.yml
+++ b/.github/workflows/nv-torch-latest-cpu.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          DS_BUILD_OPS=1 DS_BUILD_SPARSE_ATTN=0 pip install .[dev,autotuning]
+          pip install .[dev,autotuning]
           ds_report
 
       - name: Python environment
