--- a/.github/workflows/nv-torch-nightly-v100.yml
+++ b/.github/workflows/nv-torch-nightly-v100.yml
@@ -35,6 +35,7 @@ jobs:
 
       - name: Install deepspeed
         run: |
+          pip install six
           pip install .[dev,1bit,autotuning]
           ds_report
 
