Force lower torch version

--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Intall dependencies (megatron-lm)
         run: |
-          pip install torch<2.0 numpy six regex
+          pip install torch==1.13 numpy six regex
 
       - name: Install deepspeed
         run: |
