MII tests passed with this before, then failed

--- a/.github/workflows/nv-mii.yml
+++ b/.github/workflows/nv-mii.yml
@@ -45,6 +45,7 @@ jobs:
 
       - name: Install deepspeed
         run: |
+          pip install six regex
           pip install .[dev]
           ds_report
 
