[squash] styoun/triton fp16 transformer (#530)
Co-authored-by: Stephen Youn <styoun@microsoft.com>

--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install deepspeed
         run: |
-          pip install .[dev,autotuning]
+          pip install .[dev,autotuning,triton]
           ds_report
 
       - name: Formatting checks
