Update missing build dependency for packaging

--- a/.github/workflows/nv-megatron.yml
+++ b/.github/workflows/nv-megatron.yml
@@ -41,8 +41,11 @@ jobs:
 
       - name: Install apex
         run: |
-          # Install 82ee367 specifically before pyproject.toml changes due to incomplete dependencies causing errors.
-          pip install -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" git+https://github.com/NVIDIA/apex.git@82ee367
+          git clone https://github.com/loadams/apex
+          git checkout loadams/update-build-deps
+          cd apex
+          # if pip >= 23.1 (ref: https://pip.pypa.io/en/stable/news/#v23-1) which supports multiple `--config-settings` with the same key...
+          pip install -v --disable-pip-version-check --no-cache-dir --no-build-isolation --config-settings "--build-option=--cpp_ext" --config-settings "--build-option=--cuda_ext" ./
 
       - name: Python environment
         run: |
