Remove -it as CI isn't interactive

--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Load docker image
         run: |
-          sudo docker exec -it deepspeed-github-ci /bin/bash
+          sudo docker exec deepspeed-github-ci /bin/bash
 
       - name: Install transformers
         run: |
