Remove -L from nvidia-smi to confirm cuda version

--- a/.github/workflows/nv-h100.yml
+++ b/.github/workflows/nv-h100.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Nvidia SMI
         run: |
-          nvidia-smi -L
+          nvidia-smi
 
       - name: Load docker image
         run: |
